...
    Row(
        Modifier.fillMaxWidth().padding(start = 20.dp, end = 20.dp, top = 20.dp, bottom = 16.dp),
        verticalAlignment = Alignment.Top,
    ) {
        Column(Modifier.weight(1f)) {
            Label(
                if (custom) "Customize Order" else "Add to Order",
                18,
                weight = FontWeight.SemiBold,
            )
            Spacer(Modifier.height(4.dp))
            Label(product.name, 18)
            if (product.isOpenPrice) {
...
